...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="off-Ff-CEp">
                                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                        <accessibility key="accessibilityConfiguration" label="Add"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="200" id="WzX-r3-x6g"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sMw-Yq-UwW">
                                        <rect key="frame" x="0.0" y="250" width="200" height="50"/>
                                        <accessibility key="accessibilityConfiguration" label="Open"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="N95-U9-p7E"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fa4-42-U3E">
                                                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                                <accessibility key="accessibilityConfiguration" label="Camera"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="100" id="ay7-J5-aeR"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nff-Ji-2aN">
                                                <rect key="frame" x="110" y="0.0" width="100" height="100"/>
                                                <accessibility key="accessibilityConfiguration" label="Gallery"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="100" id="hTf-Xy-UT0"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zhJ-ga-TFf">
                                                <rect key="frame" x="220" y="0.0" width="100" height="100"/>
                                                <accessibility key="accessibilityConfiguration" label="Microphone"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="100" id="EAh-IO-gbI"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DJb-Ha-2Qr">
                                                <rect key="frame" x="220" y="0.0" width="100" height="100"/>
                                                <accessibility key="accessibilityConfiguration" label="Delete"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="100" id="1Q2-n0-xAX"/>
...
                    <navigationItem key="navigationItem" title="Document" id="RAc-wZ-JJU">
                        <leftBarButtonItems>
                            <barButtonItem title="Close" image="save" id="Lil-4J-AGt">
                                <connections>
                                    <segue destination="PlZ-vE-sqY" kind="presentation" identifier="home" modalTransitionStyle="flipHorizontal" id="aY6-DC-Vop"/>
...
                                </cells>
                            </tableViewSection>
                            <tableViewSection headerTitle="Photos" id="QIT-cY-fv6">
                                <cells>
                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="60" id="vTa-2P-5Po">
...
