/**
 * This file is part of coWeave-iOS.
 *
 * Copyright (c) 2017-2018 Benoît FRISCH
 *
 * coWeave-iOS is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * coWeave-iOS is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with coWeave-iOS If not, see <http://www.gnu.org/licenses/>.
 */

"groups" = "Groups";
"no-groups" = "No groups available!";
"add-group" = "Add group";
"modify-group" = "Modify name of group";
"add" = "Add";
"modify" = "Modify";
"cancel" = "Cancel";
"close" = "Close";
"name" = "Name";
"delete" = "Delete";
"delete-error-users" = "Please delete all users from group.";
"delete-warning-1" = "Would you really like to delete";
"delete-warning-2" = "You won't be able to restore them";
"no-users" = "No users available!";
"add-user" = "Add user";
"delete-error-docs" = "Please delete all documents from user.";
"documents" = "Documents";
"no-documents" = "No documents available!";
"last-opened" = "Last opened";
"created" = "Created";
"modify-title" = "Modify title";
"page" = "Page";
"error" = "Error";
"no-camera" = "No camera available!";
"document-settings" = "Document settings";
"assigned-to" = "Assigned to";
"assign-to" = "Assign to user";
"templates" = "Templates";
"pages" = "Pages";
"modify-page-title" = "Modify page title";
"save" = "Save";
"title" = "Title";
"audio-title" = "Playing recorded audio...";
"audio-question" = "Would you like to save or delete it?";
"language-switcher" = "Switch language\n Restart app after selection to apply the change.";
"successfully-imported" = "Successfully imported the file!";
"imported" = "Imported";
"documents-info" = "Documents assigned to users are shown in \"users\" section";
"unassigned-doc" = "Unassigned documents";
"delete-action" = "Delete actions";
"delete-photo" = "Remove photo";
"delete-audio" = "Remove audio";
"delete-page" = "Delete this page";
"add-page-between" = "Add a page between this page and the next page?";
"add-page" = "Add page";
"export-format" = "Choose format to export:";
"order-action" = "Order actions";
"oldest-first" = "Oldest first";
"newest-first" = "Newest first";
"last-opened" = "Last opened";


